fix(chat): fix bug chat and optimize UI
